extension_tests/invalid/semanticErr/for/forIncorrCondition.wacc
# for condition type mismatch

# Ouput:
# #semantic_error#

# Exit:
# 200

# Program

begin
    for (int i = 0; 55; i+1) do 
        skip
    done
end
